# Unichip

./: .gitignore  MCU_RaspberryPi_and_Boards.kicad_sym  NOTE.txt  Unichip.kicad_sym
DacBoard/: DacBoard.kicad_pcb  DacBoard.kicad_prl  DacBoard.kicad_pro  DacBoard.kicad_sch  SingleDac.kicad_sch  sym-lib-table
ProcessorBoard/: ProcessorBoard.kicad_prl  ProcessorBoard.kicad_pro  fp-lib-table  sym-lib-table
firmware/: CMakeLists.txt
firmware/cmake/: InitGitSubmodules.cmake
firmware/include/: unichip.hpp
firmware/src/: main.cpp
